testsuite/vhdl/syntax/test_data/label_missmatch/002_entity.expected
in file label_missmatch/002_entity, line 4:
syntax error: Label mismatch in Entity Declaration
entity testbench is
       ~~~~~~~~~ <<-- here
...
end entity test_bench;
           ~~~~~~~~~~ <<-- and here
